style: adjust mobile spacing and fix layouts

--- a/client/src/admin/page/Products/Products.css
+++ b/client/src/admin/page/Products/Products.css
@@ -18,7 +18,8 @@
 
 .product-title{
     text-align: center;
-    font-size: 2em;
+    font-size: 1.6em;
+    margin-bottom: .3em;
     font-family: 'Handlee', cursive;
 }
 
@@ -112,8 +113,6 @@
     color:black;
 }
 
-
-
 @media screen and (max-width:1000px){
     .products-container{
         width:100%;
@@ -122,7 +121,7 @@
 
 @media screen and (max-width:650px){
     .products-container{
-        margin-top:4em;
+        margin-top:3em;
     }
 }
 
@@ -150,7 +149,7 @@
     }
 
     .product-title{
-        font-size: 1.6em;
+        font-size: 1.4em;
     }
 
     .category-select div:first-child{
